--- a/like/indexM.html
+++ b/like/indexM.html
@@ -7,34 +7,17 @@
   </head>
   <body>
 
-    <h2>. </h2>
+    <h4>Hello React. Do you like it?</h4>
 
     <!-- React component inside the div. -->
-    <div id="root"></div>
+    <div id="like_button_container"></div>
 
     <!-- Load React -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <!-- Load React component. -->
-    <script type="text/babel">
-function Welcome(props) {
-  return <h1>Hello, {props.name}</h1>;
-}
-
-function App() {
-  return (
-    <div>
-      <Welcome name="React" />  </div>
-  );
-}
-
-ReactDOM.render(
-  <App />,
-  document.getElementById('root')
-);
-</script>
+    <script src="like_button.js"></script>
 
   </body>
 </html>
